--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,17 +2,17 @@ spring.application.name=JobMailSender
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=jagdishswara@gmail.com
-spring.mail.password=peuo mpwj oljt kctf
+spring.mail.username=your_user_name
+spring.mail.password=your_app_password
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/mails
+spring.datasource.url=jdbc:mysql://localhost:3306/database
 spring.datasource.username=root
-spring.datasource.password=Eversasi@0108
+spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
