--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,17 +2,17 @@ spring.application.name=JobMailSender
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=your_user_name
-spring.mail.password=your_app_password
+spring.mail.username=${GMAIL_USERNAME}
+spring.mail.password=${GMAIL_APP_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/database
-spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
